Simplified initial files Added minicard Fixed loading files for cropper and picture (only images)

--- a/resources/sass/core/buttons.scss
+++ b/resources/sass/core/buttons.scss
@@ -6,7 +6,6 @@
     align-items: center;
     display: flex;
     flex-direction: row;
-    justify-content: center;
 }
 
 .btn-link {
